ConvexOptimization/SDPA_INTEL_BLAS/arpack_CPP_v2/Debug/arpack_CPP_v2.log
Build started 10/17/2012 10:00:06 AM.
     1>Project "K:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\arpack_CPP_v2\arpack_CPP_v2.vcxproj" on node 2 (rebuild target(s)).
     1>InitializeBuildStatus:
         Creating "Debug\arpack_CPP_v2.unsuccessfulbuild" because "AlwaysCreate" was specified.
       MessageBuildingWithCompiler:
         Building with Intel(R) C++ Compiler XE 12.1
       ClCompile:
         ***** ClCompile (Win32 - Intel C++)
         C:\Program Files (x86)\Intel\Composer XE 2011 SP1\bin\ia32\icl.exe /c /Qvc10 /Qlocation,link,"$(VCInstallDir)\bin" /ZI /nologo /W3 /Od /Qftz- /D _MBCS /EHsc /RTC1 /MDd /GS /fp:precise /Zc:wchar_t /Zc:forScope /Fo"Debug\\" /Fd"Debug\vc100.pdb" /Gd /TP ..\arpack++\examples\dense\nonsym\dnsymreg.cpp
         dnsymreg.cpp
     1>..\arpack++\examples\dense\nonsym\dnsymreg.cpp(44): error : cannot open source file "dnmatrxa.h"
           #include "dnmatrxa.h"
                                ^
         
         compilation aborted for ..\arpack++\examples\dense\nonsym\dnsymreg.cpp (code 4)
     1>Done Building Project "K:\KL\Packages\ConvexOptimization\SDPA_INTEL_BLAS\arpack_CPP_v2\arpack_CPP_v2.vcxproj" (rebuild target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.17
